# aichatserver

./: build-profile.json5  oh-package.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: build-profile.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp  sherpa_napi.cpp  sherpa_napi.h  tts_manager.cpp  tts_manager.h
entry/src/main/cpp/libs/ncnn/src/: CMakeLists.txt
entry/src/main/cpp/sherpa-ncnn/sherpa-ncnn/csrc/: offline-recognizer-sense-voice-impl.h  offline-sense-voice-model.cc
entry/src/main/ets/: mnn.d.ts
entry/src/main/ets/pages/: Index.ets
entry/src/main/ets/types/: libmnnllm.d.ts
entry/src/main/resources/base/element/: string.json
